# text_dection

./: CMakeLists.txt  README.md  detect_read_text.cpp  detect_read_text_param.cpp  detect_read_text_param.cpp.autosave  detect_text.cpp  read_convert.cpp  read_opencv.cpp
